package service

import (
	"context"

	pb "universal/api/ai/v1"
)

type ToolService struct {
	pb.UnimplementedToolServer
}

func NewToolService() *ToolService {
	return &ToolService{}
}

func (s *ToolService) ListTools(ctx context.Context, req *pb.ListToolsRequest) (*pb.ListToolsReply, error) {
	return &pb.ListToolsReply{}, nil
}
func (s *ToolService) GetTool(ctx context.Context, req *pb.GetToolRequest) (*pb.GetToolReply, error) {
	return &pb.GetToolReply{}, nil
}
func (s *ToolService) CallTool(ctx context.Context, req *pb.CallToolRequest) (*pb.CallToolResponse, error) {
	return &pb.CallToolResponse{}, nil
}
func (s *ToolService) CallToolStream(req *pb.CallToolRequest, conn pb.Tool_CallToolStreamServer) error {
	for {
		err := conn.Send(&pb.CallToolStreamResponse{})
		if err != nil {
			return err
		}
	}
}
func (s *ToolService) GetToolSchema(ctx context.Context, req *pb.GetToolSchemaRequest) (*pb.GetToolSchemaReply, error) {
	return &pb.GetToolSchemaReply{}, nil
}
func (s *ToolService) ValidateToolArguments(ctx context.Context, req *pb.ValidateToolArgumentsRequest) (*pb.ValidateToolArgumentsReply, error) {
	return &pb.ValidateToolArgumentsReply{}, nil
}
func (s *ToolService) BatchCallTools(ctx context.Context, req *pb.BatchCallToolsRequest) (*pb.BatchCallToolsReply, error) {
	return &pb.BatchCallToolsReply{}, nil
}
func (s *ToolService) ListMcpServers(ctx context.Context, req *pb.ListMcpServersRequest) (*pb.ListMcpServersReply, error) {
	return &pb.ListMcpServersReply{}, nil
}
func (s *ToolService) GetMcpServer(ctx context.Context, req *pb.GetMcpServerRequest) (*pb.GetMcpServerReply, error) {
	return &pb.GetMcpServerReply{}, nil
}
func (s *ToolService) RegisterMcpServer(ctx context.Context, req *pb.RegisterMcpServerRequest) (*pb.RegisterMcpServerReply, error) {
	return &pb.RegisterMcpServerReply{}, nil
}
func (s *ToolService) UpdateMcpServer(ctx context.Context, req *pb.UpdateMcpServerRequest) (*pb.UpdateMcpServerReply, error) {
	return &pb.UpdateMcpServerReply{}, nil
}
func (s *ToolService) DeleteMcpServer(ctx context.Context, req *pb.DeleteMcpServerRequest) (*pb.DeleteMcpServerReply, error) {
	return &pb.DeleteMcpServerReply{}, nil
}
func (s *ToolService) TestMcpServer(ctx context.Context, req *pb.TestMcpServerRequest) (*pb.TestMcpServerReply, error) {
	return &pb.TestMcpServerReply{}, nil
}
func (s *ToolService) ListResources(ctx context.Context, req *pb.ListResourcesRequest) (*pb.ListResourcesReply, error) {
	return &pb.ListResourcesReply{}, nil
}
func (s *ToolService) GetResource(ctx context.Context, req *pb.GetResourceRequest) (*pb.GetResourceReply, error) {
	return &pb.GetResourceReply{}, nil
}
func (s *ToolService) SearchResources(ctx context.Context, req *pb.SearchResourcesRequest) (*pb.SearchResourcesReply, error) {
	return &pb.SearchResourcesReply{}, nil
}
func (s *ToolService) WatchResource(req *pb.WatchResourceRequest, conn pb.Tool_WatchResourceServer) error {
	for {
		err := conn.Send(&pb.WatchResourceReply{})
		if err != nil {
			return err
		}
	}
}
func (s *ToolService) GetToolExecutionHistory(ctx context.Context, req *pb.GetToolExecutionHistoryRequest) (*pb.GetToolExecutionHistoryReply, error) {
	return &pb.GetToolExecutionHistoryReply{}, nil
}
func (s *ToolService) GetToolExecutionStats(ctx context.Context, req *pb.GetToolExecutionStatsRequest) (*pb.GetToolExecutionStatsReply, error) {
	return &pb.GetToolExecutionStatsReply{}, nil
}
func (s *ToolService) EnableTool(ctx context.Context, req *pb.EnableToolRequest) (*pb.EnableToolReply, error) {
	return &pb.EnableToolReply{}, nil
}
func (s *ToolService) DisableTool(ctx context.Context, req *pb.DisableToolRequest) (*pb.DisableToolReply, error) {
	return &pb.DisableToolReply{}, nil
}
func (s *ToolService) ConfigureTool(ctx context.Context, req *pb.ConfigureToolRequest) (*pb.ConfigureToolReply, error) {
	return &pb.ConfigureToolReply{}, nil
}
func (s *ToolService) GetToolConfig(ctx context.Context, req *pb.GetToolConfigRequest) (*pb.GetToolConfigReply, error) {
	return &pb.GetToolConfigReply{}, nil
}
