package service

import (
	"context"

	aiv1 "universal/api/ai/v1"
	pb "universal/api/gateway/v1"
)

type ToolService struct {
	pb.UnimplementedToolServer
}

func NewToolService() *ToolService {
	return &ToolService{}
}

func (s *ToolService) ListTools(ctx context.Context, req *aiv1.ListToolsRequest) (*aiv1.ListToolsReply, error) {
	return &aiv1.ListToolsReply{}, nil
}
func (s *ToolService) GetTool(ctx context.Context, req *aiv1.GetToolRequest) (*aiv1.GetToolReply, error) {
	return &aiv1.GetToolReply{}, nil
}
func (s *ToolService) CallTool(ctx context.Context, req *aiv1.CallToolRequest) (*aiv1.CallToolResponse, error) {
	return &aiv1.CallToolResponse{}, nil
}
func (s *ToolService) CallToolStream(req *aiv1.CallToolRequest, conn pb.Tool_CallToolStreamServer) error {
	for {
		err := conn.Send(&aiv1.CallToolStreamResponse{})
		if err != nil {
			return err
		}
	}
}
func (s *ToolService) GetToolSchema(ctx context.Context, req *aiv1.GetToolSchemaRequest) (*aiv1.GetToolSchemaReply, error) {
	return &aiv1.GetToolSchemaReply{}, nil
}
func (s *ToolService) ValidateToolArguments(ctx context.Context, req *aiv1.ValidateToolArgumentsRequest) (*aiv1.ValidateToolArgumentsReply, error) {
	return &aiv1.ValidateToolArgumentsReply{}, nil
}
func (s *ToolService) BatchCallTools(ctx context.Context, req *aiv1.BatchCallToolsRequest) (*aiv1.BatchCallToolsReply, error) {
	return &aiv1.BatchCallToolsReply{}, nil
}
func (s *ToolService) ListMcpServers(ctx context.Context, req *aiv1.ListMcpServersRequest) (*aiv1.ListMcpServersReply, error) {
	return &aiv1.ListMcpServersReply{}, nil
}
func (s *ToolService) GetMcpServer(ctx context.Context, req *aiv1.GetMcpServerRequest) (*aiv1.GetMcpServerReply, error) {
	return &aiv1.GetMcpServerReply{}, nil
}
func (s *ToolService) RegisterMcpServer(ctx context.Context, req *aiv1.RegisterMcpServerRequest) (*aiv1.RegisterMcpServerReply, error) {
	return &aiv1.RegisterMcpServerReply{}, nil
}
func (s *ToolService) UpdateMcpServer(ctx context.Context, req *aiv1.UpdateMcpServerRequest) (*aiv1.UpdateMcpServerReply, error) {
	return &aiv1.UpdateMcpServerReply{}, nil
}
func (s *ToolService) DeleteMcpServer(ctx context.Context, req *aiv1.DeleteMcpServerRequest) (*aiv1.DeleteMcpServerReply, error) {
	return &aiv1.DeleteMcpServerReply{}, nil
}
func (s *ToolService) TestMcpServer(ctx context.Context, req *aiv1.TestMcpServerRequest) (*aiv1.TestMcpServerReply, error) {
	return &aiv1.TestMcpServerReply{}, nil
}
func (s *ToolService) ListResources(ctx context.Context, req *aiv1.ListResourcesRequest) (*aiv1.ListResourcesReply, error) {
	return &aiv1.ListResourcesReply{}, nil
}
func (s *ToolService) GetResource(ctx context.Context, req *aiv1.GetResourceRequest) (*aiv1.GetResourceReply, error) {
	return &aiv1.GetResourceReply{}, nil
}
func (s *ToolService) SearchResources(ctx context.Context, req *aiv1.SearchResourcesRequest) (*aiv1.SearchResourcesReply, error) {
	return &aiv1.SearchResourcesReply{}, nil
}
func (s *ToolService) WatchResource(req *aiv1.WatchResourceRequest, conn pb.Tool_WatchResourceServer) error {
	for {
		err := conn.Send(&aiv1.WatchResourceReply{})
		if err != nil {
			return err
		}
	}
}
func (s *ToolService) GetToolExecutionHistory(ctx context.Context, req *aiv1.GetToolExecutionHistoryRequest) (*aiv1.GetToolExecutionHistoryReply, error) {
	return &aiv1.GetToolExecutionHistoryReply{}, nil
}
func (s *ToolService) GetToolExecutionStats(ctx context.Context, req *aiv1.GetToolExecutionStatsRequest) (*aiv1.GetToolExecutionStatsReply, error) {
	return &aiv1.GetToolExecutionStatsReply{}, nil
}
func (s *ToolService) EnableTool(ctx context.Context, req *aiv1.EnableToolRequest) (*aiv1.EnableToolReply, error) {
	return &aiv1.EnableToolReply{}, nil
}
func (s *ToolService) DisableTool(ctx context.Context, req *aiv1.DisableToolRequest) (*aiv1.DisableToolReply, error) {
	return &aiv1.DisableToolReply{}, nil
}
func (s *ToolService) ConfigureTool(ctx context.Context, req *aiv1.ConfigureToolRequest) (*aiv1.ConfigureToolReply, error) {
	return &aiv1.ConfigureToolReply{}, nil
}
func (s *ToolService) GetToolConfig(ctx context.Context, req *aiv1.GetToolConfigRequest) (*aiv1.GetToolConfigReply, error) {
	return &aiv1.GetToolConfigReply{}, nil
}
